# fastembed-text-search-demo

./: .gitignore  README.md  pyproject.toml
fastembed_text_search_demo/: create_embeddings_confluence.py  create_embeddings_dune.py  llama.py  query_confluence.py  query_confluence_with_llama.py  query_dune.py
fastembed_text_search_demo/data/: dune-short.txt  dune.txt
