[tool.poetry]
name = "fastembed-text-search-demo"
version = "0.1.0"
description = ""
authors = ["Manfred Dreese <impressum@dreese.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
jsonlines = "^4.0.0"
fastembed = "^0.1.1"
qdrant-client = "^1.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
